force-app/main/default/objects/RV_CFactor__c/RV_CFactor__c.object-meta.xml
<CustomObject>
    <label>RV CFactor</label>
    <nameField>
        <label>RV CFactor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV CFactor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>