force-app/main/default/objects/RV_CFactor__c/fields/CFactor__c.field-meta.xml
<CustomField>
    <fullName>CFactor__c</fullName>
    <label>CFactor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>