force-app/main/default/objects/RV_CFactor__c/fields/CMethod__c.field-meta.xml
<CustomField>
    <fullName>CMethod__c</fullName>
    <label>CMethod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>