force-app/main/default/objects/RV_CFactor__c/fields/OP__c.field-meta.xml
<CustomField>
    <fullName>OP__c</fullName>
    <label>OP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>