force-app/main/default/objects/RV_CFactor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CMethod__c</columns>
    <columns>OP__c</columns>
    <columns>CFactor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>